# NoteGenAIAPIs

./: .dockerignore  .gitignore  DEVOPS_TODO.md  Dockerfile  Makefile  QA_Agent_Plan.md  README.md  cursor-terraform-infra-mistakes.md  docker-compose.yml  env.template  env_example  example.json  example2.json  logging.conf  opensearch_fix.md  pyproject.toml  test_langfuse_simple.py
.cursor/rules/: ai-system-architecture.mdc  coding-standards.mdc  environment-setup.mdc  project-structure.mdc  rag-architecture.mdc  security.mdc  soap-generation-patterns.mdc  story.mdc
.github/workflows/: deploy.yml
.windsurf/rules/: ai-system-architecture.md  coding-standards.md  environment-setup.md  project-structure.md  rag-architecture.md  security.md  soap-generation-patterns.md  story.md
aws/: task-definition-prod.json  task-definition.json
docs/: devops_deployment_plan.md
generated_notes/123432d234sdfda56tfdxsz/: detailed_processing.json  processing_log.txt
generated_notes/123432d234sdfda56tfdxsz/sections/: Assessment.json  Billing_Codes.json  Objective.json  Patient_Summary.json  Plan.json  Referral_Note.json  Subjective.json
generated_notes/1234sdfda56tfdxsz/: detailed_processing.json  processing_log.txt
generated_notes/1234sdfda56tfdxsz/sections/: Assessment.json  Billing_Codes.json  Objective.json  Patient_Summary.json  Plan.json  Referral_Note.json  Subjective.json
generated_notes/123edfg/: detailed_processing.json  processing_log.txt
generated_notes/123edfg/sections/: Assessment.json  Objective.json  Plan.json  Section_1.json  Subjective.json  Visit_-_1.json  Visit_-_2.json
generated_notes/2were3wkjh12ew87346/: detailed_processing.json  processing_log.txt
generated_notes/2were3wkjh12ew87346/sections/: Assessment.json  Objective.json  Plan.json  Section_1.json  Subjective.json  Visit_-_1.json  Visit_-_2.json
generated_notes/encounter_12345/: detailed_processing.json  processing_log.txt
generated_notes/encounter_12345/sections/: Subjective.json
generated_notes/examples/: example.json  example1.json  example2.json
src/: __init__.py  debug_trigger.md  main.py  pipeline_test.md
src/api/: health.py  production_api.py  tenant.py
src/api/endpoints/: conversation.py  health.py  soap.py
src/core/: __init__.py  config.py  logging.py  observability.py  security.py
src/core/aws/: create_speaker_aware_chunks.py  create_tenant_collection.py  opensearch_conversation_rag_service.py  prepare_transcript_turns.py  retrieve_relevant_chunks.py  set_current_collection.py  setup_aws_auth.py  store_and_chunk_conversation.py
src/core/azure_openai/: azure_openai.py  generate_section.py
src/core/neo4j/: get_snomed_mappings_for_terms.py  queries.py  snomed_rag_service.py
src/core/notegen/: patient_info.py  section_generation.py
src/core/preferences/: pattern_learning.py
src/core/settings/: config.py  logging.py  observability.py
src/models/: __init__.py  api_models.py
src/modules/notes_management/: handlers.py  router.py  schema.py  services.py
src/services/: __init__.py  azure_openai.py  conversation_rag.py  neo4j.py  neo4j_snomed_rag.py  nestjs_integration.py  notegen.py  notegen_api.py  notegen_api_service.py  opensearch.py  opensearch_rag.py  patient_info.py  patient_info_service.py  pattern_learning.py  preferences.py  section_generator.py  snomed_rag.py  soap_generator.py
src/templates/: __init__.py  prompts.py  queries.py
terraform/: DEPLOYMENT_SAFETY.md  SAFETY_CHECKLIST.md  validate-safety.sh
terraform/envs/prod/: data.tf  (+7 more)
(+70 files in other folders)
